# The-Context-Window

./: .gitignore  LICENSE  README.md
chinese-whispers/: main.py
chinese-whispers/config/: models.yaml
chinese-whispers/results/runs/20260516T193427_gemma_solo_seed42/: round_03.json  round_04.json  round_06.json  round_08.json
chinese-whispers/results/runs/20260516T194652_gemma_solo_seed123/: round_03.json  round_05.json  round_07.json  round_08.json
chinese-whispers/src/telephone/: cli.py  prompts.py
chinese-whispers/tests/: test_length_control.py  test_prompts.py
grounding-gradient/: grounding_gradient.py
grounding-gradient/runs/: 20260417_224738_stufe0.jsonl  20260417_225415_stufe0.jsonl  20260417_225821_stufe0.jsonl  20260417_230709_stufe0.jsonl  20260418_102214_stufe3.jsonl
telephone-game/: probe_raw.py  pyproject.toml
telephone-game/config/: experiments.yaml
telephone-game/data/: ground_truth.json  source_text.txt
telephone-game/results/runs/20260516T193427_gemma_solo_seed42/: round_01.json  round_02.json  round_05.json  round_07.json  round_09.json  round_10.json  run_summary.json
telephone-game/results/runs/20260516T194652_gemma_solo_seed123/: round_01.json  round_02.json  round_04.json  round_06.json  round_09.json  round_10.json  run_summary.json
telephone-game/results/runs/20260516T194823_gemma_solo_seed456/: round_01.json  round_04.json  round_06.json  round_08.json  round_09.json  round_10.json  run_summary.json
telephone-game/src/telephone/: inference.py  length_control.py  runner.py  storage.py
(+4 files in other folders)
