[project]
name = "telephone-game"
version = "0.1.0"
description = "Multi-round LLM paraphrase drift experiment runner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "click>=8.0",
]

[project.scripts]
telephone = "telephone.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telephone"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
